Fixed alignment issues with different screen sizes

--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -11,33 +11,33 @@ body {
 /* Title */
 .vert-text {
   position: relative;
-  top: 300px;
-  left: 200px;
+  top: 19vw;
+  left: 13%;
 }
 #top .vert-text h1 {
   padding: 0;
   margin: 0;
-  font-size: 1000%;
+  font-size: 9vw;
   font-weight: 1000;
   color: white;
   font-family: 'Amatic SC', cursive;
 }
 #top .vert-text h2{
-  font-size: 300%;
+  font-size: 2.7vw;
   font-weight: 300;
   color: white;
   font-family: 'Playball', cursive;
   padding: 0;
   margin: 0;
   position: relative;
-  right: 22px;
-  top: -19px;
+  right: 1.5%;
+  top: -10px;
  }
 /* Title text delay */
 #delayFade {
-   animation-duration: 10s;
-   -moz-animation-duration: 10s;
-   -webkit-animation-duration: 10s;
+   animation-duration: 7s;
+   -moz-animation-duration: 7s;
+   -webkit-animation-duration: 7s;
 }
 #top {
    animation-delay: 1s;
@@ -262,38 +262,38 @@ body {
 
 .board_members #p1 {
   position: relative;
-  top: 430px;
-  left: 100px;
+  top: 62%;
+  left: 8%;
   opacity:0;
 }
 
 .board_members #p2 {
   position: relative;
-  top: 130px;
-  left: 160px;
+  top: 16%;
+  left: 11%;
   opacity:0;
 }
 .board_members #p3 {
   position: relative;
-  bottom: 190px;
-  left: 245px;
+  bottom: 25%;
+  left: 17%;
   opacity:0;
 }
 .board_members #p4 {
   position: relative;
-  bottom: 500px;
-  left: 440px;
+  bottom: 70%;
+  left: 32%;
   opacity:0;
 }
 .board_members #p5 {
   position: relative;
-  bottom: 730px;
-  left: 615px;
+  bottom: 102%;
+  left: 44%;
   opacity:0;
 }
 .board_members #p6 {
   position: relative;
-  bottom: 900px;
+  bottom: 100%;
   left: 800px;
   opacity:0;
 }
@@ -447,22 +447,27 @@ body {
   border-radius: 10px;
 }
 .carousel-caption {
-    position: absolute;
-    right: 15%;
-    bottom: -6%;
-    left: 15%;
+    position: relative;
+    bottom: 7%;
+    left: 0%;
     z-index: 10;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 1.2%;
+    padding-bottom: 1.2%;
     color: #FFF;
     text-align: center;
     text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.6);
+    height: 20%;
 }
 
 /* Carousel Captions */
 .carousel-inner p{
-  font-size: 130%;
-  bottom: 5px;
+  font-size: 1.3vw;
+  bottom: 4%;
+  position: relative;
+}
+.carousel-inner h1{
+  font-size: 2.5vw;
+  bottom: -3%;
   position: relative;
 }
 
@@ -493,8 +498,9 @@ body {
     margin-bottom: 2.2%
 }
 .about-section p{
-    font-size: 110%;
+    font-size: 1.0vw;
 }
+
 /* Social Icons Styles */
 .list-social-icons {
   margin-bottom: 45px;
@@ -524,10 +530,12 @@ body {
 /* Events */
 .upcoming-panel{
     position: relative;
-    bottom: 700px;
+    top: 6vw;
+    left: 2.7%;
+    
 }
 .panel-heading{
-    font-size: 130%;
+    font-size: 140%;
     text-align: center;
 }
 .hero-spacer {
@@ -539,7 +547,7 @@ body {
 #contact .content{
     padding-top: 5%;
     position: relative;
-    right: 13%;
+    right: 0%;
     
 }
 #events h1{
@@ -555,6 +563,6 @@ body {
     position: relative;
     vertical-align: center;
     bottom: 10px;
-    left: .3%;
+    left: 0%;
     
 }
